@@ -1,6 +1,51 @@
+author: Andres Salomon <dilinger@debian.org>
+description: work around a clang bug with libstdc++
+
+Chromium 119 used absl's 'optional' implementation. Chromium 120 switched to
+aliasing absl::optional to std::optional. In theory that should be all fine
+and good, except for the fact that there's a bug in clang:
+
+https://github.com/llvm/llvm-project/issues/50248
+
+This bug is worked around in libc++, but not in libstdc++. There's (so far)
+two types of errors we hit. The first is specifically with
+absl::optional::emplace() -
+
+>> gen/ui/gfx/x/randr.cc:482:13: error: no matching member function for call to 'emplace'
+>>     data.lc.emplace();
+>>     ~~~~~~~~^~~~~~~
+>> /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/optional:914:2: note: candidate template ignored: requirement 'is_constructible_v<x11::RandR::NotifyEvent::Lc>' was not satisfied [with _Args = <>]
+>>         emplace(_Args&&... __args)
+>>
+
+..and a similar error with just a few calls to absl::make_optional() -
+
+>> ./../third_party/blink/renderer/core/loader/history_item.cc:185:19: error: no matching function for call to 'make_optional'
+>>     view_state_ = absl::make_optional<ViewState>();
+
+We can't simply revert to using absl's optional implmentation, because a) they
+are planning to remove it  (<https://abseil.io/about/design/dropin-types>), and
+b) chromium devs, having switched over and viewing absl::optional and
+std::optional as aliases, play fast and loose with those namespace. We end up
+playing an ever-worsening game of whack-a-mole trying to fix build errors which
+are just inability to do implicit conversions.
+
+Another option (which some other distributions have chosen to do) is to simply
+switch to building against libc++. However, that means bundling a bunch more
+libraries that build statically against libc++. That's undesirable.
+
+This patch provides the option of providing a workaround for libstdc++. Instead
+of using the official libstdc++ header for optional, we provide our own with
+the is_constructible assertions removed. There's no logic changes, it just
+removes an assertion we _know_ is met, but the compiler too broken to know it.
+
+I just copied over /usr/include/c++/13/optional, and changed a few of the
+functions (where you see an '#if 0' commenting out the original function).
+We'll need to update this patch with major libstdc++ upgrades.
+
 --- /dev/null
 +++ b/optional
-@@ -0,0 +1,1537 @@
+@@ -0,0 +1,1557 @@
 +// <optional> -*- C++ -*-
 +
 +// Copyright (C) 2013-2023 Free Software Foundation, Inc.
@@ -517,8 +562,13 @@
 +      constexpr _Optional_base() = default;
 +
 +      // Constructors for engaged optionals.
++#if 0
 +      template<typename... _Args,
 +	       enable_if_t<is_constructible_v<_Tp, _Args...>, bool> = false>
++#else
++// Drop is_constructible_v to work around a clang bug
++      template<typename... _Args>
++#endif
 +	constexpr explicit
 +	_Optional_base(in_place_t, _Args&&... __args)
 +	: _M_payload(in_place, std::forward<_Args>(__args)...)
@@ -812,11 +862,18 @@
 +	    emplace(std::move(*__t));
 +	}
 +
++#if 0
 +      template<typename... _Args,
 +	       _Requires<is_constructible<_Tp, _Args...>> = false>
 +	explicit constexpr
 +	optional(in_place_t, _Args&&... __args)
 +	noexcept(is_nothrow_constructible_v<_Tp, _Args...>)
++#else
++// Drop the constructible checks
++      template<typename... _Args>
++	explicit constexpr
++	optional(in_place_t, _Args&&... __args)
++#endif
 +	: _Base(std::in_place, std::forward<_Args>(__args)...) { }
 +
 +      template<typename _Up, typename... _Args,
@@ -911,17 +968,6 @@
 +	  return *this;
 +	}
 +
-+  // Take the function definition from absl::optional's emplace, with the
-+  // body from std::optional's emplace (below).
-+  template <typename... Args,
-+            typename = typename std::enable_if<
-+                std::is_constructible<_Tp, Args&&...>::value>::type>
-+  _Tp& emplace(Args&&... args) {
-+    this->_M_reset();
-+    this->_M_construct(std::forward<Args>(args)...);
-+    return this->_M_get();
-+  }
-+
 +#if 0
 +      template<typename... _Args>
 +	_GLIBCXX20_CONSTEXPR
@@ -933,6 +979,17 @@
 +	  this->_M_construct(std::forward<_Args>(__args)...);
 +	  return this->_M_get();
 +	}
++#else
++// Take the function definition from absl::optional's emplace, with the
++// body from std::optional's emplace (below).
++  template <typename... Args,
++            typename = typename std::enable_if<
++                std::is_constructible<_Tp, Args&&...>::value>::type>
++  _Tp& emplace(Args&&... args) {
++    this->_M_reset();
++    this->_M_construct(std::forward<Args>(args)...);
++    return this->_M_get();
++  }
 +#endif
 +
 +      template<typename _Up, typename... _Args>
@@ -1477,12 +1534,20 @@
 +    noexcept(is_nothrow_constructible_v<optional<decay_t<_Tp>>, _Tp>)
 +    { return optional<decay_t<_Tp>>{ std::forward<_Tp>(__t) }; }
 +
++#if 0
 +  template<typename _Tp, typename... _Args>
 +    constexpr
 +    enable_if_t<is_constructible_v<_Tp, _Args...>,
 +		optional<_Tp>>
 +    make_optional(_Args&&... __args)
 +    noexcept(is_nothrow_constructible_v<_Tp, _Args...>)
++#else
++// Drop is_constructible assertions, that's all that's needed
++  template<typename _Tp, typename... _Args>
++    constexpr
++		optional<_Tp>
++    make_optional(_Args&&... __args)
++#endif
 +    { return optional<_Tp>{ in_place, std::forward<_Args>(__args)... }; }
 +
 +  template<typename _Tp, typename _Up, typename... _Args>
