@@ -27,7 +27,9 @@ chromium (120.0.6099.71-1) UNRELEASED; urgency=high
     - bookworm/clang16.patch: new patch working around upstream's clang18 flags.
     - upstream/nullptr_t.patch: more libstdc++13 build fixes.
     - upstream/string-include.patch: add a simple header include build fix.
-    - fixes/absl-optional.patch: TODO
+    - fixes/absl-optional.patch: add a workaround for a clang bug
+      (https://github.com/llvm/llvm-project/issues/50248) by providing our
+      own 'optional' header.
 
   [ Timothy Pearson ]
   * d/patches/ppc64le:
